<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <TextView
            android:id="@+id/name"
            style="@style/NameStyle"
            android:text="@string/name"
             />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:id="@+id/pname"
            />
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            style="@style/NameStyle"
            android:text="@string/quantity"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:id="@+id/quantity"
            android:hint="@string/quantity"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="increase"
                android:layout_marginLeft="70dp"
                android:id="@+id/inc"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="decrease"
                android:layout_marginLeft="35dp"
                android:id="@+id/dec"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <TextView
                style="@style/NameStyle"
                android:text="@string/price"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:id="@+id/price"
                android:hint="@string/pricee"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <TextView
                style="@style/NameStyle"
                android:text="@string/sname"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/snamee"
                android:id="@+id/sname"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <TextView
                style="@style/NameStyle"
                android:text="@string/sname"/>
            <EditText
                android:layout_width="0dp"
                android:id="@+id/semail"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <TextView
                style="@style/NameStyle"
                android:text="@string/sname"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/sno"
                android:layout_weight="2"
                android:hint="@string/ph"/>
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Delete"
               android:id="@+id/del"
               android:layout_marginLeft="25dp"
               />
           <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Supplier"
                android:id="@+id/contact"
                android:layout_marginLeft="25dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
